Agrega etiquetas de metadatos para compartir por Facebooks

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,6 +6,12 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<link rel="manifest" href="manifest.json">
 	<link href="css/app.css" rel="stylesheet">
+	<meta property="fb:app_id"			   content="2495587024001265">
+	<meta property="og:url"				   content="https://rodcar.github.io/AI_Dictionary_English_Spanish/webapp/index.html">	
+	<meta property="og:type"               content="website" />
+	<meta property="og:title"              content="Diccionario Inglés-Español de Términos Técnicos en Inteligencia Artificial (IA)" />
+	<meta property="og:description"        content="Con el fin de apoyar al entendimiento de la Inteligencia Artificial en la comunidad de Latinos y Latinas, se ha creado el Primer Diccionario Ingles-Español de Terminos Técnicos en Inteligencia Artificial (IA). Usuarios que pueden beneficiarse de este diccionario son estudiantes, periodistas, y divulgadores científicos que necesiten un acceso directo a conceptos de IA y que puedan compartirse facilmente en un lenguaje simple." />
+	<meta property="og:image"              content="https://i.imgur.com/FgmRQ3Z.png" />
 </head>
 <body>
 	<section id="busqueda">
