--- a/webapp/index.html
+++ b/webapp/index.html
@@ -23,7 +23,7 @@
 	<section id="prefacio">
 		<p>Una gran parte del conocimiento relacionado a la Inteligencia Artificial esta disponible solo en Inglés. Esto previene que la informacion se comparta entre los hablantes de Español e Inglés, y llegue a todos con la misma igualdad de oportunidades.</p>
 
-		<p>Con el fin de apoyar al entendimiento de la Inteligencia Artificial en la comunidad de Latinos y Latinas, se ha creado el Primer Diccionario Ingles-Español de Terminos Técnicos en Inteligencia Artificial (IA). Usuarios que pueden beneficiarse de este diccionario son estudiantes, periodistas, y divulgadores científicos que necesiten un acceso directo a conceptos de IA y que puedan compartirse facilmente en un lenguaje simple.</p>
+		<p>Con el fin de apoyar al entendimiento de la Inteligencia Artificial en la comunidad de Latinos y Latinas, se ha creado el Primer Diccionario Ingles-Español de Terminos Técnicos en Inteligencia Artificial (IA).</p>
 
 		<p>Por ese motivo, la primera definición de cada concepto corresponde a una descripcion en alto nivel. Las siguientes explicaciones proveen detalles técnicos y matemáticos para lectores interesados en profundizar su comprensión. El formato de cada entrada es el siguiente;</p>
 
