--- a/webapp/index.html
+++ b/webapp/index.html
@@ -19,7 +19,7 @@
 		<datalist id="terminos">
 		</datalist>     
 	</section>	
-	<h1>Diccionario Inglés-Español de Términos Técnicos en Inteligencia Artificial (IA)</h1>
+	<h1 id="titulo">Diccionario Inglés-Español de Términos Técnicos en Inteligencia Artificial (IA)</h1>
 	<section id="prefacio">
 		<p>Una gran parte del conocimiento relacionado a la Inteligencia Artificial esta disponible solo en Inglés. Esto previene que la informacion se comparta entre los hablantes de Español e Inglés, y llegue a todos con la misma igualdad de oportunidades.</p>
 
