--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-27169462-4"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-27169462-4');
+	</script>
 	<meta charset="UTF-8">
 	<title>Diccionario Inglés-Español de Términos Técnicos en Inteligencia Artificial (IA)</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no">
